# mini-issue-triage

./: README.md  pyproject.toml
examples/: issues.json
src/issue_triage/: __init__.py  cli.py  duplicates.py  io.py  models.py  reporting.py  scoring.py  text.py  triage.py
tests/: test_duplicates.py  test_io_reporting_cli.py  test_scoring.py  test_triage.py
