[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "mini-issue-triage"
version = "0.1.0"
description = "A dependency-free CLI that ranks bug reports and groups likely duplicates."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Saina Kakkar" }]
dependencies = []

[project.scripts]
issue-triage = "issue_triage.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

